--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
+      <p class="top-section-for-adding-element-to-list">
+        <label class="new-task-label">
+          Add Item
         <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
+          <input class="new-task task" type="text">
           <button>Add</button>
         </div>
+        </label>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul class="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -27,7 +29,7 @@
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -36,7 +38,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul class="completed-tasks">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
