refactor: change class name according to rule 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="banner-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p class="top-section-for-adding-element-to-list">
+    <div class="content-thumb">
+      <p class="create-section">
         <label class="new-task-label">
           Add Item
         <div class="task-row-wrapper">
