--- a/index.html
+++ b/index.html
@@ -5,46 +5,46 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="banner-thumb">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="banner-img" src="./eisenhower-matrix.jpg">
       <a class="banner-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="content-thumb">
       <p class="create-section">
-        <label class="new-task-label">
+        <label class="title new-task-label">
           Add Item
         <div class="task-row-wrapper">
-          <input class="new-task task" type="text">
-          <button>Add</button>
+          <input class="new-task" type="text">
+          <button class="btn">Add</button>
         </div>
         </label>
       </p>
-      <h3>Todo</h3>
-      <ul class="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Todo</h3>
+      <ul class="list incomplete-tasks">
+        <li class="task-item">
+          <input class="task-item-checkbox" type="checkbox">
+          <label class="task task-item-label">Pay Bills</label>
+          <input type="text" class="task task-item-input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task-item edit-mode">
+          <input class="task-item-checkbox" type="checkbox">
+          <label class="task task-item-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-item-input">
+          <button class="btn edit">Save</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul class="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Completed</h3>
+      <ul class="list completed-tasks">
+        <li class="task-item">
+          <input class="task-item-checkbox" type="checkbox" checked>
+          <label class="task task-item-label completed-tasks-label">See the Doctor</label>
+          <input type="text" class="task task-item-input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
