--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <label class="title new-task-label">
           Add Item
         <div class="task-row-wrapper">
-          <input class="new-task" type="text">
+          <input class="new-task input-txt" type="text">
           <button class="btn">Add</button>
         </div>
         </label>
@@ -25,14 +25,14 @@
         <li class="task-item">
           <input class="task-item-checkbox" type="checkbox">
           <label class="task task-item-label">Pay Bills</label>
-          <input type="text" class="task task-item-input">
+          <input type="text" class="task task-item-input input-txt">
           <button class="btn edit">Edit</button>
           <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
         <li class="task-item edit-mode">
           <input class="task-item-checkbox" type="checkbox">
           <label class="task task-item-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-item-input">
+          <input type="text" value="Go Shopping" class="task task-item-input input-txt">
           <button class="btn edit">Save</button>
           <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
@@ -42,7 +42,7 @@
         <li class="task-item">
           <input class="task-item-checkbox" type="checkbox" checked>
           <label class="task task-item-label completed-tasks-label">See the Doctor</label>
-          <input type="text" class="task task-item-input">
+          <input type="text" class="task task-item-input input-txt">
           <button class="btn edit">Edit</button>
           <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
