--- a/index.html
+++ b/index.html
@@ -6,48 +6,50 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="banner-thumb">
+    <header class="banner-thumb">
       <img class="banner-img" src="./eisenhower-matrix.jpg">
       <a class="banner-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="content-thumb">
-      <p class="create-section">
-        <label class="title new-task-label">
-          Add Item
+    </header>
+    <main class="content-thumb">
+      <section class="create-section">
+        <h3 class="title new-task-label">Add Item</h3>
         <div class="task-row-wrapper">
           <input class="new-task input-txt" type="text">
-          <button class="btn">Add</button>
+          <button type="button" class="btn">Add</button>
         </div>
-        </label>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="list incomplete-tasks">
-        <li class="task-item">
-          <input class="task-item-checkbox" type="checkbox">
-          <label class="task task-item-label">Pay Bills</label>
-          <input type="text" class="task task-item-input input-txt">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
-        </li>
-        <li class="task-item edit-mode">
-          <input class="task-item-checkbox" type="checkbox">
-          <label class="task task-item-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-item-input input-txt">
-          <button class="btn edit">Save</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="list completed-tasks">
-        <li class="task-item">
-          <input class="task-item-checkbox" type="checkbox" checked>
-          <label class="task task-item-label completed-tasks-label">See the Doctor</label>
-          <input type="text" class="task task-item-input input-txt">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="title">Todo</h3>
+        <ul class="list incomplete-tasks">
+          <li class="task-item">
+            <input class="task-item-checkbox" type="checkbox">
+            <label class="task task-item-label">Pay Bills</label>
+            <input type="text" class="task task-item-input input-txt">
+            <button type="button" class="btn edit">Edit</button>
+            <button type="button" class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          </li>
+          <li class="task-item edit-mode">
+            <input class="task-item-checkbox" type="checkbox">
+            <label class="task task-item-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task task-item-input input-txt">
+            <button type="button" class="btn edit">Save</button>
+            <button type="button" class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="title">Completed</h3>
+        <ul class="list completed-tasks">
+          <li class="task-item">
+            <input class="task-item-checkbox" type="checkbox" checked>
+            <label class="task task-item-label completed-tasks-label">See the Doctor</label>
+            <input type="text" class="task task-item-input input-txt">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
