--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link
+        href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+        rel="stylesheet">
+    <link
+        rel="stylesheet"
+        href="style.css"
+        media="screen"
+        charset="utf-8">
   </head>
   <body class="body">
     <header class="banner-thumb">
-      <img class="banner-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
-      <a class="banner-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img
+          class="banner-img"
+          src="./eisenhower-matrix.jpg"
+          alt="eisenhower matrix image">
+      <a
+          class="banner-link"
+          href="https://goal-life.com/page/method/matrix-eisenhower">
+          Want more details?
+      </a>
     </header>
     <main class="content-thumb">
       <section class="create-section">
@@ -26,14 +39,24 @@
             <label class="task task-item-label">Pay Bills</label>
             <input type="text" class="task task-item-input input-txt">
             <button type="button" class="btn edit">Edit</button>
-            <button type="button" class="btn delete" aria-label="button for delete task"><img class="delete-img" src="./remove.svg" alt=""></button>
+            <button
+                type="button"
+                class="btn delete"
+                aria-label="button for delete task">
+              <img class="delete-img" src="./remove.svg" alt="">
+            </button>
           </li>
           <li class="task-item edit-mode">
             <input class="task-item-checkbox" type="checkbox">
             <label class="task task-item-label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task task-item-input input-txt">
             <button type="button" class="btn edit">Save</button>
-            <button type="button" class="btn delete" aria-label="button for delete task"><img class="delete-img" src="./remove.svg" alt=""></button>
+            <button
+                type="button"
+                class="btn delete"
+                aria-label="button for delete task">
+              <img class="delete-img" src="./remove.svg" alt="">
+            </button>
           </li>
         </ul>
       </section>
@@ -45,7 +68,12 @@
             <label class="task task-item-label completed-tasks-label">See the Doctor</label>
             <input type="text" class="task task-item-input input-txt">
             <button class="btn edit">Edit</button>
-            <button class="btn delete" aria-label="button for delete task"><img class="delete-img" src="./remove.svg" alt=""></button>
+            <button
+                type="button"
+                class="btn delete"
+                aria-label="button for delete task">
+              <img class="delete-img" src="./remove.svg" alt="">
+            </button>
           </li>
         </ul>
       </section>
