--- a/index.html
+++ b/index.html
@@ -12,67 +12,67 @@
         charset="utf-8">
   </head>
   <body class="body">
-    <header class="banner-thumb">
+    <header class="header header_indents">
       <img
-          class="banner-img"
+          class="header__img"
           src="./eisenhower-matrix.jpg"
           alt="eisenhower matrix image">
       <a
-          class="banner-link"
+          class="header__link"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
     </header>
-    <main class="content-thumb">
-      <section class="create-section">
-        <h3 class="title new-task-label">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input class="new-task input-txt" type="text">
+    <main class="content-thumb content-thumb_indents">
+      <section class="section section_indents">
+        <h3 class="section__title section__title_indents">Add Item</h3>
+        <div class="create">
+          <input class="create__task-inp create__task-inp_indents" type="text">
           <button type="button" class="btn">Add</button>
         </div>
       </section>
-      <section>
-        <h3 class="title">Todo</h3>
-        <ul class="list incomplete-tasks">
+      <section class="section">
+        <h3 class="section__title">Todo</h3>
+        <ul class="section__list section__list_indents section__list_incomplete">
           <li class="task-item">
-            <input class="task-item-checkbox" type="checkbox">
-            <label class="task task-item-label">Pay Bills</label>
-            <input type="text" class="task task-item-input input-txt">
-            <button type="button" class="btn edit">Edit</button>
+            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox">
+            <label class="task-item__label">Pay Bills</label>
+            <input type="text" class="task-item__input task-item__input_indents">
+            <button type="button" class="btn task-item__edit-btn">Edit</button>
             <button
                 type="button"
-                class="btn delete"
+                class="btn task-item__delete-btn"
                 aria-label="button for delete task">
-              <img class="delete-img" src="./remove.svg" alt="">
+              <img class="task-item__delete-img" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="task-item edit-mode">
-            <input class="task-item-checkbox" type="checkbox">
-            <label class="task task-item-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task task-item-input input-txt">
-            <button type="button" class="btn edit">Save</button>
+          <li class="task-item task-item_edit">
+            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox">
+            <label class="task-item__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task-item__input task-item__input_indents">
+            <button type="button" class="btn task-item__edit-btn">Save</button>
             <button
                 type="button"
-                class="btn delete"
+                class="btn task-item__delete-btn"
                 aria-label="button for delete task">
-              <img class="delete-img" src="./remove.svg" alt="">
+              <img class="task-item__delete-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="title">Completed</h3>
-        <ul class="list completed-tasks">
+      <section class="section">
+        <h3 class="section__title">Completed</h3>
+        <ul class="section__list section__list_indents section__list_completed">
           <li class="task-item">
-            <input class="task-item-checkbox" type="checkbox" checked>
-            <label class="task task-item-label completed-tasks-label">See the Doctor</label>
-            <input type="text" class="task task-item-input input-txt">
-            <button class="btn edit">Edit</button>
+            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox" checked>
+            <label class="task-item__label task-item__label_completed">See the Doctor</label>
+            <input type="text" class="task-item__input task-item__input_indents">
+            <button class="btn task-item__edit-btn">Edit</button>
             <button
                 type="button"
-                class="btn delete"
+                class="btn task-item__delete-btn"
                 aria-label="button for delete task">
-              <img class="delete-img" src="./remove.svg" alt="">
+              <img class="task-item__delete-img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
