refactor: remove redundant comments from js file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3 class="section__title section__title_indents">Add Item</h3>
         <div class="create">
           <input class="create__task-inp create__task-inp_indents" type="text">
-          <button type="button" class="btn">Add</button>
+          <button type="button" class="btn create__btn">Add</button>
         </div>
       </section>
       <section class="section">
