--- a/index.html
+++ b/index.html
@@ -27,29 +27,43 @@
       <section class="section section_indents">
         <h3 class="section__title section__title_indents">Add Item</h3>
         <div class="create">
-          <input class="create__task-inp create__task-inp_indents" type="text">
+          <input class="create__task-inp
+                        create__task-inp_indents"
+                 type="text">
           <button type="button" class="btn create__btn">Add</button>
         </div>
       </section>
       <section class="section">
         <h3 class="section__title">Todo</h3>
-        <ul class="section__list section__list_indents section__list_incomplete">
+        <ul class="section__list
+                   section__list_indents
+                   section__list_incomplete">
           <li class="task-item">
-            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox">
+            <input class="task-item__checkbox
+                          task-item__checkbox_indents"
+                   type="checkbox">
             <label class="task-item__label">Pay Bills</label>
-            <input type="text" class="task-item__input task-item__input_indents">
+            <input type="text"
+                   class="task-item__input
+                          task-item__input_indents">
             <button type="button" class="btn task-item__edit-btn">Edit</button>
-            <button
-                type="button"
-                class="btn task-item__delete-btn"
-                aria-label="button for delete task">
-              <img class="task-item__delete-img" src="./remove.svg" alt="">
+            <button type="button"
+                    class="btn task-item__delete-btn"
+                    aria-label="button for delete task">
+              <img class="task-item__delete-img"
+                   src="./remove.svg"
+                   alt="">
             </button>
           </li>
           <li class="task-item task-item_edit">
-            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox">
+            <input class="task-item__checkbox
+                          task-item__checkbox_indents"
+                   type="checkbox">
             <label class="task-item__label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-item__input task-item__input_indents">
+            <input type="text"
+                   value="Go Shopping"
+                   class="task-item__input
+                          task-item__input_indents">
             <button type="button" class="btn task-item__edit-btn">Save</button>
             <button
                 type="button"
@@ -62,11 +76,18 @@
       </section>
       <section class="section">
         <h3 class="section__title">Completed</h3>
-        <ul class="section__list section__list_indents section__list_completed">
+        <ul class="section__list
+                   section__list_indents
+                   section__list_completed">
           <li class="task-item">
-            <input class="task-item__checkbox task-item__checkbox_indents" type="checkbox" checked>
+            <input class="task-item__checkbox
+                          task-item__checkbox_indents"
+                    type="checkbox"
+                    checked>
             <label class="task-item__label task-item__label_completed">See the Doctor</label>
-            <input type="text" class="task-item__input task-item__input_indents">
+            <input type="text"
+                   class="task-item__input
+                          task-item__input_indents">
             <button class="btn task-item__edit-btn">Edit</button>
             <button
                 type="button"
